--- a/front-end/src/theme/dark/_smui-theme.scss
+++ b/front-end/src/theme/dark/_smui-theme.scss
@@ -1,5 +1,4 @@
 @use 'sass:color';
-
 @use '@material/theme/color-palette';
 
 // Svelte Colors! (Dark Theme)
@@ -10,6 +9,7 @@
   $background: #0C061E,
   $error: #dc3545,
 );
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap');
 
 :root {
   --button-radius: 15px
